# woolydart

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
example/: basic_example.dart  rag_summarize.dart  woolydart_example.dart
lib/: woolydart.dart
lib/src/: llama_cpp_bindings.dart  woolydart_base.dart
src/: CMakeLists.txt  bindings.cpp  bindings.h  llamacpp_patch.patch
test/: woolydart_embedding_test.dart  woolydart_grammar_test.dart  woolydart_plain_test.dart  woolydart_step_test.dart  woolydart_test.dart
